feat: add user preferences (settings) api
